--- a/Wavy-Collection-View/Base.lproj/Main.storyboard
+++ b/Wavy-Collection-View/Base.lproj/Main.storyboard
@@ -24,16 +24,15 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="wavyCell" id="bxG-av-BN0">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="wavyCell" id="bxG-av-BN0" customClass="WavyCell">
                                 <rect key="frame" x="0.0" y="0.0" width="101" height="100"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="101" height="100"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jhh-pC-gKp">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jhh-pC-gKp">
                                             <rect key="frame" x="29" y="40" width="42" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -41,6 +40,13 @@
                                     </subviews>
                                 </view>
                                 <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="jhh-pC-gKp" firstAttribute="centerY" secondItem="bxG-av-BN0" secondAttribute="centerY" id="S1H-NE-4Oa"/>
+                                    <constraint firstItem="jhh-pC-gKp" firstAttribute="centerX" secondItem="bxG-av-BN0" secondAttribute="centerX" id="pW8-p8-W53"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="cellIDLabel" destination="jhh-pC-gKp" id="NkW-ik-Yay"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
